usable on mobile, alignment fixes

--- a/css/project1style.css
+++ b/css/project1style.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
 html {
     margin: 0%;
 }
@@ -11,14 +21,19 @@ body {
 }
 
 header {
-    background-color: green;
+    /* background-color: green; */
     padding: 0;
+    margin: 0;
+}
+header > * {
+    display: flex;
+    justify-content: center;
 }
 
 .navlinks {
     list-style-type: none;
     background-color: gray;
-    /* display: inline-block; */
+    display: inline-block;
     /* margin: 0px;
     padding: 0; */
     display: flex;
@@ -26,16 +41,26 @@ header {
     align-items: baseline;
     justify-content: center;
     padding-top: 0%;
+    width: 100vw;
+    /* overflow: auto; */
 }
 
-.navlinks > li {
+.navlinks > li{
     font-size: 2em;
     margin: 5px;
+    text-decoration: none;
+    text-decoration-style: double;
+}
+.nav-option {
+    text-decoration: none;
 }
 
 .navlinks > li:hover {
     background-color: white;
 }
+/* .nav-option {
+    font-style: italic;
+} */
 .page {
     position: relative;
 }
@@ -57,14 +82,12 @@ header {
     font-size: .50em;
     /* border-style: solid; */
     border-bottom: 3px solid black;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 
 }
-.city-pic {
-    width: 100vw;
-}
-
-.title {
-    text-decoration: underline;
+.home-title {
+    /* text-decoration: underline; */
     text-align: center;
     margin: 0;
     padding: 1em;
@@ -72,73 +95,125 @@ header {
 }
 .glasgow {
     font-family: 'Poppins', sans-serif;
-    margin-left: 50vw;
+    /* margin-left: 50vw; */
 }
 .edinburgh {
     font-family: 'Poppins', sans-serif;
-    margin-left: 50vw;
+    /* margin-left: 50vw; */
 }
 .london {
     font-family: 'Poppins', sans-serif;
-    margin-left: 50vw;
+    /* margin-left: 50vw; */
 }
 .brighton {
     font-family: 'Poppins', sans-serif;
-    margin-left: 50vw;
+    /* margin-left: 50vw; */
+}
+h2 {
+    font-size: 2em;
+}
+h1 {
+    font-size: 2em;
 }
 main {
     display: flex;
     flex-direction: column;
     padding: 1em;
     /* width: 100vw; */
-    margin-left: 30vw;
+    /* margin-left: 30vw; */
     /* margin-top: 10px; */
-    overflow: scroll;
+    justify-content: center;
+    /* overflow: scroll; */
 }
 main > div {
-    padding: inherit;
-    margin-left: inherit;
+    display: flex;
+    padding: 1em;
+    justify-content: center;
+    /* margin-left: inherit; */
 }
-
+main > * {
+    display: flex;
+    justify-content: center;
+}
+#suggestions {
+    /* padding-left: 1em; */
+    margin-left: 5px;
+    margin-right: 1px;
+    margin-top: 5px;
+    background-color: white;
+    border: solid;
+    border-width: 1px;
+}
 button {
     vertical-align: bottom;
+    border: solid;
+    border-width: 1px;
+    margin-bottom: 5px;
+    background-color: white;
+    padding: 2px;
 }
+
 footer {
     padding: 1em;
     border: solid;
 }
-
+.pic-link {
+    display: flex;
+    justify-content: center;
+}
 .city-pic {
     display: inline-flex;
     flex-direction: row;
     max-inline-size: 33%;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
+    /* width: 100vw; */
 }
-.city-pic:hover {
-    transform: rotate(15deg) scale(1.2);
-    transition-duration: .5s;
-}
-@media screen and (max-width: 480px) {
 
+.city-pic:hover {
+    transform: scale(1.2);
+    transition-duration: .5s;    
+}
+
+figure > .city-pic{
+    max-inline-size: 67%;
+}
+/* iframe {
+    display: block;
+    max-width: 50vw;
+    vertical-align: middle;
+    justify-content: center;
+} */
+
+@media screen and (max-width: 480px) {
+/* 
     main {
         margin: 0;
-    }
+    } */
     .navlinks {
-        flex-direction: column;
-        float: left;
+        
+        /* flex-direction: column; */
+        display: inline-flexbox;
+        flex-wrap:wrap;
+        justify-content: left;
+        /* float: left; */
     }
-    .page {
+    /* .page {
         display: inline;
         flex-direction: column;
         float: left;
 
-    }
+    } */
     .page:hover > .nav-page-links{
-        display: inline;
-        flex-direction: row;
-        left: 100%;
-        top: 0%;
-      }
+        display: none;
+
+    }
     .city-pic {
-        width: 200px;
+        display: inline;
+        max-inline-size: 100%;
+        width: 100vw;
     }
 }
